add vk api